# SISTER

./: .flake8  .sister.env.test  README.md  download_icons.py  log_config.py  pipeline.py  pyproject.toml  requirements.txt  setup.py  setup_freeze.py  sister-cli.py  sister.py  sister.py-old  wsgi.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  PRIVACY.md  callbacks.md  config.yaml.template  engine-class-refactor.md
examples/: minimal_pipeline_demo.py  send_email.py
forwardemail/: .gitignore  README.md  setup.py
images/: .gitignore  hash_index.json
sister_sto/: cli.py  log_config.py
sister_sto/components/: icon_group_locator.py  icon_slot_locator.py  label_locator.py  layout_classifier.py  prefilter_hash.py
sister_sto/config/: default.yaml
sister_sto/metrics/: barcode.py  ms_ssim.py
sister_sto/pipeline/: __init__.py  core.py  pipeline.py
sister_sto/stages/: __init__.py  classify_layout.py  crop_label_regions.py  detect_icon_overlays.py  detect_icons.py  load_icons.py  locate_icon_groups.py  locate_icon_slots.py  locate_labels.py  output_transform.py  prefilter_icons.py
sister_sto/tasks/: __init__.py  app_init.py  build_hash_cache.py  download_icons.py  manage_executor_pool.py
sister_sto/utils/: cargo.py  config.py  hashindex.py  image.py  persistent_executor.py  test_instrumentation.py
sister_web/docs/: PRIVACY.md
sister_web/sister_website/: __init__.py  forms.py  models.py
sister_web/website_test_suite/: test_email_utils.py  test_file_handling.py  test_submission_routes.py
sister_website/: .env.example  README.md  app.py  email_utils.py  forms.py  models.py  requirements.txt
sister_website/templates/: _form_helpers.html  acceptance_thank_you.html  admin_change_normal_user_password.html  admin_change_password.html  admin_dashboard.html  admin_dataset_labels.html  admin_dataset_manager.html  admin_edit_dataset_label.html  admin_edit_normal_user.html  admin_login.html  admin_normal_users.html  admin_screenshots.html  admin_submissions.html  admin_users.html  base.html  decline_confirmation.html  email_template.html  forgot_password.html  index.html  login.html  register.html  reply_email_template.html  reset_password.html  submission_received.html  training_data_stats.html  user_settings.html  user_submissions.html  withdrawal_confirmation.html
src/: cargo.py  classifier.py  exceptions.py  hashindex.py  iconmap.py  iconmatch.py  iconslot.py  locator.py  prefilter.py  region.py  sister.py
src/engines/: akaze.py  edgehistogram.py  hog.py  ncc.py  prefilter.py  ssim.py  ssim_common.py  ssim_match.py  ssim_quality.py
src/hashers/: phash.py
src/prefilters/: phash.py
src/utils/: image.py
sto_sister/: exceptions.py  locator.py
sto_sister/components/: icon_detector.py  icon_group_locator.py  icon_matcher.py  icon_overlay_detector.py  icon_slot_detector.py  icon_slot_locator.py  label_locator.py  layout_classifier.py  overlay_detector.py  prefilter_hash.py  prefilter_phash.py  region_detector.py
sto_sister/hashers/: phash.py
sto_sister/metrics/: barcode.py  mean_hue.py  ms_ssim.py
sto_sister/pipeline/: __init__.py  core.py  pipeline.py  progress_reporter.py
test/: test_build_classifier.py  test_icon_matching.py  test_icon_slot_detector.py  test_label_locator.py  test_region_detector.py
test_suite/: conftest.py  pytest.ini  requirements-test.txt  test_cli.py  test_exceptions.py  test_integration.py  test_logging.py  test_metrics.py  test_pipeline.py
training/: dataset.py  east_test_detection.py  model.py  requirements.txt  train.py
website_test_suite/: conftest.py  pytest.ini  test_admin_normal_user_routes.py  test_admin_routes.py  test_auth.py  test_email_integration.py  test_file_handling.py  test_models.py  test_password_reset_flow.py  test_user_browser.py  test_user_settings.py  test_util_functions.py  test_webhook_handling.py
(+78 files in other folders)
