[project]
name = "sister_sto"
version = "v2025.05.31"
description = "SISTER (Screenshot Interrogation System for Traits and Equipment Recognition): computer vision pipeline designed to match icons within screenshots"
authors = [{"name" = "Phillip O'Donnell", "email" = "phillip.odonnell@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "opencv-contrib-python",
    "numpy",
    "scikit-image",
    "easyocr",
    "imagehash",
    "pybktree",
    "requests",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sister_sto*"]

[tool.setuptools.package-data]
"sister" = ["resources/*.json"]

[project.entry-points.console_scripts]
sister-cli = "sister_sto.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | docs
  | log
  | output
  | .*\.egg-info
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "log",
    "output",
    ".venv",
    "venv",
    "env",
    "*.egg-info"
]
extend-select = ["B", "B9", "C4", "D"]
per-file-ignores = { "test/*.py" = ["D101", "D102", "D103"] }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
