[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sister_sto"
version = "2025.05.31"
description = "Screenshot Interrogation System for Traits and Equipment Recognition - Star Trek Online"
authors = [
    { name = "Phillip O'Donnell" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "scikit-image",
    "easyocr",
    "imagehash",
    "pybktree",
    "requests",
    "tqdm",
    "pyyaml",
]

[project.scripts]
sister = "sister_sto.cli:main"

[tool.setuptools]
package-data = {sister_sto = ["config/*.yaml", "resources/overlays/*", "resources/cache/*"]}

[tool.setuptools.packages.find]
include = ["sister_sto*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | docs
  | log
  | output
  | .*\.egg-info
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "log",
    "output",
    ".venv",
    "venv",
    "env",
    "*.egg-info"
]
extend-select = ["B", "B9", "C4", "D"]
per-file-ignores = { "test/*.py" = ["D101", "D102", "D103"] }
